tests/014_eq_int_lam.out
tests/014_eq_int_lam.pan:33:1-4: error:
  â€¢ Unable to validate verification condition for f10
tests/014_eq_int_lam.pan:36:1-4: error:
  â€¢ Unable to validate verification condition for f11
f0 : {x:â„¤ | true} â†’ {c:ğ”¹ | c = true â‡” x = 1}
f1 : â„¤ â†’ ğ”¹
f2 : {n:â„¤ | true} â†’ ğ”¹
f3 : â„¤ â†’ {v:ğ”¹ | true}
f4 : {n:â„¤ | true} â†’ {v:ğ”¹ | v = true â‡” n = 1}
f5 : {n:â„¤ | n = 1} â†’ {v:ğ”¹ | v = true}
f6 : {n:â„¤ | n = 1} â†’ {v:ğ”¹ | v = true}
f7 : {n:â„¤ | n â‰  1} â†’ {v:ğ”¹ | v = false}
f8 : {n:â„¤ | n = 2} â†’ {v:ğ”¹ | v = false}
f9 : {n:â„¤ | n = 1} â†’ {v:ğ”¹ | v = true}
f12 : {n:â„¤ | n = 2} â†’ {v:ğ”¹ | v = false}
f13 : {n:â„¤ | n â‰¥ 1} â†’ {v:ğ”¹ | v = true â‡” n = 1}
f14 : {n:â„¤ | n > 1} â†’ {v:ğ”¹ | v = false}
f15 : {n:â„¤ | n > 1} â†’ {v:ğ”¹ | v = false}